proj_skj1_django/nohup.out
  File "manage.py", line 17
    ) from exc
         ^
SyntaxError: invalid syntax
Watching for file changes with StatReloader
[07/Feb/2021 07:58:57] "GET / HTTP/1.1" 200 5438
[07/Feb/2021 07:58:57] "GET /static/rest_framework/css/prettify.css HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/css/bootstrap.min.css HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/js/jquery-3.5.1.min.js HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/js/csrf.js HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/js/ajax-form.js HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/js/prettify-min.js HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/css/default.css HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/img/grid.png HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/js/default.js HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/js/bootstrap.min.js HTTP/1.1" 304 0
[07/Feb/2021 07:58:57] "GET /static/rest_framework/css/bootstrap-tweaks.css HTTP/1.1" 200 3385
[07/Feb/2021 07:59:09] "GET / HTTP/1.1" 200 5438
Not Found: /admin
[07/Feb/2021 07:59:17] "GET /admin HTTP/1.1" 404 3934
Not Found: /favicon.ico
[07/Feb/2021 07:59:17] "GET /favicon.ico HTTP/1.1" 404 3952
Not Found: /admin/
[07/Feb/2021 07:59:24] "GET /admin/ HTTP/1.1" 404 3937
[07/Feb/2021 07:59:32] "GET / HTTP/1.1" 200 5438
[07/Feb/2021 07:59:45] "GET /api-auth/login/?next=/ HTTP/1.1" 200 2701
Not Found: /favicon.ico
[07/Feb/2021 07:59:45] "GET /favicon.ico HTTP/1.1" 404 3952
[07/Feb/2021 07:59:59] "GET /api-auth/login/?next=/ HTTP/1.1" 200 2701
[07/Feb/2021 08:36:42] "GET / HTTP/1.1" 200 5438
Forbidden: /users/
[07/Feb/2021 08:36:55] "GET /users/ HTTP/1.1" 403 5090
Not Found: /favicon.ico
[07/Feb/2021 08:36:56] "GET /favicon.ico HTTP/1.1" 404 3952
[07/Feb/2021 08:37:07] "GET / HTTP/1.1" 200 5438
/Users/kihunlee/Github/prj_skj1/proj_skj1_django/proj_skj1_django/urls.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
February 07, 2021 - 07:58:31
Django version 3.1.6, using settings 'proj_skj1_django.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
[07/Feb/2021 08:50:41] "GET / HTTP/1.1" 200 5438
[07/Feb/2021 08:50:41] "GET /static/rest_framework/css/bootstrap-tweaks.css HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/css/bootstrap.min.css HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/css/prettify.css HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/css/default.css HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/js/jquery-3.5.1.min.js HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/js/csrf.js HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/js/default.js HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/js/ajax-form.js HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/js/bootstrap.min.js HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/js/prettify-min.js HTTP/1.1" 304 0
[07/Feb/2021 08:50:41] "GET /static/rest_framework/img/grid.png HTTP/1.1" 304 0
[07/Feb/2021 08:50:43] "GET / HTTP/1.1" 200 5438
[07/Feb/2021 08:50:44] "GET / HTTP/1.1" 200 5438
[07/Feb/2021 08:50:44] "GET / HTTP/1.1" 200 5438
[07/Feb/2021 08:50:45] "GET / HTTP/1.1" 200 5438
